feat: adicionando página pessoal do Guilherme com descrição e mídia

--- a/index.html
+++ b/index.html
@@ -289,8 +289,13 @@
                 <li><strong>Guilherme de Sousa Santos</strong> - 11201921175</li>
             </ul>
             <h3>Documentos e Recursos</h3>
+            <h4>Página de membros</h4>
             <ul>
                 <li><a href="membros/ian.html">Página do Ian Victor Toniolo Silva</a></li>
+                <li><a href="membros/guilherme/index.html">Página do Guilherme de Sousa Santos</a></li>
+            </ul>
+
+            <ul>
                 <li><a href="relatorios/index.html">Índice de Relatórios</a></li>
                 <li><a href="trabalhos/index.html">Índice de Trabalhos</a></li>
             </ul>
