--- a/relatorios/index.html
+++ b/relatorios/index.html
@@ -1,1 +1,56 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Índice de Relatórios - Grupo 8 - ICPG</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f5f6fa;
+            color: #111827;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #2563eb;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #2563eb;
+            transition: color 0.2s;
+        }
+        a:hover {
+            color: #e11d48;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #6b7280;
+        }
+    </style>
+</head>
+<body>
+    <h1>Índice de Relatórios</h1>
+    <p>Bem-vindo ao índice de relatórios do Grupo 8 - ICPG. Aqui você encontrará uma lista dos relatórios desenvolvidos ao longo do curso de Visão Computacional.</p>
+    <ul>
+        <li><a href="lab_1/lab1.html">Laboratório 1: Captura de Imagem e Vídeo</a></li>
+        <li><a href="lab2.html">Laboratório 2: Processamento de Imagens</a></li>
+        <li><a href="lab3.html">Laboratório 3: Reconhecimento de Objetos</a></li>
+        <li><a href="lab4.html">Laboratório 4: Análise de Vídeo</a></li>
+        <li><a href="lab5.html">Laboratório 5: Projeto Final</a></li>
+    </ul>
+    <footer>
+        &copy; 2025 Grupo 8 - ICPG | Visão Computacional - UFABC
+    </footer>
+</body>
+</html>
