add pagina cesar
add pagina cesar

--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
             <ul>
                 <li><a href="membros/ian.html">Página do Ian Victor Toniolo Silva</a></li>
                 <li><a href="membros/guilherme/index.html">Página do Guilherme de Sousa Santos</a></li>
+                <li><a href="membros/cesar.html">Página do Cesar Seiji Maruyama</a></li>
             </ul>
 
             <ul>
