--- a/index.html
+++ b/index.html
@@ -294,9 +294,10 @@
                 <li><a href="membros/ian.html">Página do Ian Victor Toniolo Silva</a></li>
                 <li><a href="membros/guilherme/index.html">Página do Guilherme de Sousa Santos</a></li>
                 <li><a href="membros/cesar.html">Página do Cesar Seiji Maruyama</a></li>
+                <li><a href="membros/pedro/index.html">Página do Pedro Henrique Cardoso Silva</a></li>
             </ul>
 
-            <ul>
+            <h4>Relatórios e trabalhos</h4>
                 <li><a href="relatorios/index.html">Índice de Relatórios</a></li>
                 <li><a href="trabalhos/index.html">Índice de Trabalhos</a></li>
             </ul>
