feat: identifying step 1

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 </article>
             </section>
             <section id="etapa1-section">
-                <h3>Proposta de Sistema Simples para Contagem Automática</h3>
+                <h3>Proposta de Sistema Simples para Contagem Automática (Etapa 1)</h3>
                 <section class="cenario">
                     <h4>Cenário de Aplicação Proposto</h4>
                     <div>
