adds members photo

--- a/relatorios/lab_1/lab1.html
+++ b/relatorios/lab_1/lab1.html
@@ -176,7 +176,7 @@
 <blockquote>
 <p>Dessa forma, a imagem será lida corretamente com as cores e apresentada na janela da seguinte forma:</p>
 </blockquote>
-<p><img src="./messi-com-cores.png" alt="alt text" title="Title"></p>
+<p><img src="file:////home/ufabc/Documentos/projeto/cv2025.2-grupo8-icpg/relatorios/lab_1/messi-com-cores.png" alt="alt text" title="Title"></p>
 <p><strong>Como reproduzir?</strong></p>
 <blockquote>
 <ol>
@@ -372,6 +372,7 @@ cv.destroyAllWindows()
 <hr>
 <h3 id="parte-2-obtenção-de-fotos-e-vídeos">PARTE 2: Obtenção de Fotos e Vídeos</h3>
 <p><strong>(A) Obtenção de foto da equipe</strong></p>
+<img src="file:////home/ufabc/Documentos/projeto/cv2025.2-grupo8-icpg/relatorios/lab_1/foto1.png" width="320" height="240">
 <p><strong>(B) Foto Avatar da equipe</strong></p>
 <p><strong>(C) Vídeos com pessoas e com objeto</strong></p>
 <blockquote>
