--- a/trabalhos/index.html
+++ b/trabalhos/index.html
@@ -1,5 +1,59 @@
-<html>
-
-<a href="./etapa_2/index.html">Etapa 02</a>
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Índice de Relatórios - Grupo 8 - ICPG</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f5f6fa;
+            color: #111827;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #2563eb;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #2563eb;
+            transition: color 0.2s;
+        }
+        a:hover {
+            color: #e11d48;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #6b7280;
+        }
+    </style>
+</head>
+<body>
+    <h1>Índice das etapas do trabalho</h1>
+    <p>Bem-vindo ao índice das etapas do trabalho do Grupo 8 - ICPG. Aqui você encontrará uma lista dos relatórios desenvolvidos ao longo do curso de Visão Computacional.</p>
+    <ul>
+        <li><a href="etapa_1/index.html">Etapa 1</a></li>
+        <li><a href="etapa_2/index.html">Etapa 2</a></li>
+        <li><a href="etapa_3/index.html">Etapa 3</a></li>
+        <li><a href="etapa_4/index.html">Etapa 4</a></li>
+        <li><a href="etapa_5/index.html">Etapa 5</a></li>
+        <li><a href="etapa_6/index.html">Etapa 6</a></li>
+        <li><a href="etapa_7/index.html">Etapa 7</a></li>
+        <li><a href="etapa_8/index.html">Etapa 8</a></li>
+    </ul>
+    <footer>
+        &copy; 2025 Grupo 8 - ICPG | Visão Computacional - UFABC
+    </footer>
+</body>
 </html>
