fix: project steps indexes

--- a/trabalhos/etapa_1/index.html
+++ b/trabalhos/etapa_1/index.html
@@ -1,1 +1,28 @@
-<html></html>
+<main class="container">
+    <section id="trabalho" class="content-section">
+        <h2>Etapa 1</h2>
+        <section id="etapa1-section">
+            <h3>Proposta de Sistema Simples para Contagem Automática</h3>
+            <section class="cenario">
+                <h4>Cenário de Aplicação Proposto</h4>
+                <div>
+                    <b>Contexto:</b> Tanto no armazém quanto na obra, existe a necessidade de contar rapidamente
+                    quantos itens ou pessoas de cada categoria estão presentes em uma lista.<br>
+                    <b>Problema a ser Resolvido:</b> Automatizar a contagem de categorias em listas simples
+                    (planilhas), evitando erros e economizando tempo.<br>
+                    <b>Objetivo:</b> Desenvolver um programa que leia uma planilha (CSV) com uma coluna de categoria
+                    (tipo de pacote ou função do funcionário) e exiba a contagem de cada categoria.
+                </div>
+            </section>
+            <section class="requisitos">
+                <h4>Requisitos do Sistema</h4>
+                <ul>
+                    <li>Ler um arquivo CSV com uma coluna de categoria.</li>
+                    <li>Contar automaticamente quantos itens existem de cada categoria.</li>
+                    <li>Exibir o resultado de forma clara e simples.</li>
+                    <li>Ser fácil de usar e adaptar para diferentes listas.</li>
+                </ul>
+            </section>
+        </section>
+    </section>
+</main>
