--- a/trabalhos/etapa_0/index.html
+++ b/trabalhos/etapa_0/index.html
@@ -1,1 +1,40 @@
-<html></html>
+<main class="container">
+    <section id="trabalho" class="content-section">
+        <h2>Etapa 0</h2>
+        <section id="etapa0-section">
+            <h3>Entrevistas</h3>
+            <article class="entrevista">
+                <h4>Entrevista 1: Guilherme (Gerente de Logística)</h4>
+                <ul>
+                    <li><b>Pergunta:</b> Existe alguma tarefa repetitiva no seu trabalho que poderia ser
+                        automatizada com um programa simples?</li>
+                    <li><b>Resposta:</b> Sim, todos os dias preciso contar quantos pacotes de cada tipo chegaram ao
+                        armazém. Recebo uma planilha com uma coluna "Tipo" e preciso somar quantos de cada tipo
+                        vieram. Isso toma tempo e é fácil de errar.</li>
+                    <li><b>Pergunta:</b> Como você faz isso atualmente?</li>
+                    <li><b>Resposta:</b> Eu filtro manualmente na planilha e conto, ou uso a função de contagem do
+                        Excel, mas às vezes esqueço de atualizar.</li>
+                    <li><b>Pergunta:</b> Você gostaria de um programa que lesse a planilha e mostrasse
+                        automaticamente a contagem de cada tipo?</li>
+                    <li><b>Resposta:</b> Seria ótimo! Facilitaria muito o meu dia a dia.</li>
+                </ul>
+            </article>
+            <article class="entrevista">
+                <h4>Entrevista 2: Victor Hugo (Supervisor de Obras)</h4>
+                <ul>
+                    <li><b>Pergunta:</b> Você tem alguma tarefa repetitiva que poderia ser automatizada com um
+                        programa simples?</li>
+                    <li><b>Resposta:</b> Sim, preciso conferir diariamente quantos funcionários de cada função estão
+                        presentes na obra. Tenho uma lista com o nome e a função de cada um, mas preciso contar
+                        quantos pedreiros, eletricistas, etc. estão presentes.</li>
+                    <li><b>Pergunta:</b> Como faz isso hoje?</li>
+                    <li><b>Resposta:</b> Eu conto manualmente na lista, mas às vezes me confundo ou esqueço alguém.
+                    </li>
+                    <li><b>Pergunta:</b> Um programa que lesse a lista e mostrasse a quantidade de cada função
+                        ajudaria?</li>
+                    <li><b>Resposta:</b> Com certeza! Seria muito útil e evitaria erros.</li>
+                </ul>
+            </article>
+        </section>
+    </section>
+</main>
