feat: adding step 0

--- a/trabalhos/index.html
+++ b/trabalhos/index.html
@@ -43,6 +43,7 @@
     <h1>Índice das etapas do trabalho</h1>
     <p>Bem-vindo ao índice das etapas do trabalho do Grupo 8 - ICPG. Aqui você encontrará uma lista dos relatórios desenvolvidos ao longo do curso de Visão Computacional.</p>
     <ul>
+        <li><a href="etapa_0/index.html">Etapa 0</a></li>
         <li><a href="etapa_1/index.html">Etapa 1</a></li>
         <li><a href="etapa_2/index.html">Etapa 2</a></li>
         <li><a href="etapa_3/index.html">Etapa 3</a></li>
