--- a/relatorios/lab_1/lab1.html
+++ b/relatorios/lab_1/lab1.html
@@ -372,8 +372,9 @@ cv.destroyAllWindows()
 <hr>
 <h3 id="parte-2-obtenção-de-fotos-e-vídeos">PARTE 2: Obtenção de Fotos e Vídeos</h3>
 <p><strong>(A) Obtenção de foto da equipe</strong></p>
-<img src="file:////home/ufabc/Documentos/projeto/cv2025.2-grupo8-icpg/relatorios/lab_1/foto1.png" width="320" height="240">
+<img src="foto1.png" width="320" height="240">
 <p><strong>(B) Foto Avatar da equipe</strong></p>
+<img src="avatares.png" width="720" height="300">
 <p><strong>(C) Vídeos com pessoas e com objeto</strong></p>
 <blockquote>
 <p>O seguinte vídeo foi gravado com uma pessoa realizando movimentos rápidos com as mãos:</p>
