fix: update image source path in lab1.html for correct rendering

--- a/relatorios/lab_1/lab1.html
+++ b/relatorios/lab_1/lab1.html
@@ -176,7 +176,7 @@
 <blockquote>
 <p>Dessa forma, a imagem será lida corretamente com as cores e apresentada na janela da seguinte forma:</p>
 </blockquote>
-<p><img src="file:////home/ufabc/Documentos/projeto/cv2025.2-grupo8-icpg/relatorios/lab_1/messi-com-cores.png" alt="alt text" title="Title"></p>
+<p><img src="./messi-com-cores.png" alt="alt text" title="Title"></p>
 <p><strong>Como reproduzir?</strong></p>
 <blockquote>
 <ol>
