adds interviews with Letícia and Rafael to index.html

--- a/trabalhos/etapa_0/index.html
+++ b/trabalhos/etapa_0/index.html
@@ -35,6 +35,53 @@
                     <li><b>Resposta:</b> Com certeza! Seria muito útil e evitaria erros.</li>
                 </ul>
             </article>
+            <hr>
+            <article class="entrevista">
+                <h4>Entrevista 3 – Irmã (Profissional Externa)</h4>
+                <p><b>Entrevistado(a):</b> Letícia de Sousa Santos (irmã)</p>
+                <p><b>Profissão:</b> Maquiadora</p>
+                <p><b>Idade:</b> 18</p>
+                <p><b>Local:</b> WhatsApp (simulada como bate-papo)</p>
+                <p><b>Entrevistador:</b> Guilherme de Sousa Santos</p>
+                <p><b>Data da entrevista:</b> 19/06/2025</p>
+                <p><b>Diálogo:</b></p>
+                <ul>
+                    <li><p><b>Você:</b> Lê, tô fazendo um trabalho da faculdade e queria trocar uma ideia com você rapidinho. Pode ser?</p></li>
+                    <li><p><b>Letícia:</b> Claro, manda aí!</p></li>
+                    <li><p><b>Você:</b> Tô estudando visão computacional, e meu grupo precisa entrevistar pessoas de fora da facul pra entender problemas do dia a dia que talvez possam ser resolvidos com câmeras ou processamento de imagem, sabe?</p></li>
+                    <li><p><b>Letícia:</b> Humm, legal! E como posso ajudar?</p></li>
+                    <li><p><b>Você:</b> Queria saber, no seu dia a dia como maquiadora, tem alguma coisa que você acha que poderia ser melhor ou mais fácil se tivesse uma tecnologia assim?</p></li>
+                    <li><p><b>Letícia:</b> Olha, agora que você falou... tem uma coisa que sempre me dá dor de cabeça: acertar a maquiagem com a luz certa. Tipo, eu maquio alguém aqui com uma luz, a pessoa vai pra um evento e a maquiagem tá super diferente na outra luz. Às vezes fica estourado no flash ou muito escuro.</p></li>
+                    <li><p><b>Você:</b> Entendi. Então seria legal algo que te ajudasse a prever como vai ficar a maquiagem em diferentes condições de luz?</p></li>
+                    <li><p><b>Letícia:</b> Isso! Se tivesse um app que, tipo, eu apontasse a câmera pra cliente e ele mostrasse como a maquiagem ia ficar com luz de balada, luz do dia, luz amarelada... ia ser perfeito! Aí eu já ia ajustando na hora. Porque hoje, no olho, é difícil de prever tudo isso.</p></li>
+                    <li><p><b>Você:</b> Nossa, faz muito sentido. Top demais, Lê. Já me deu ideias ótimas. Valeu mesmo!</p></li>
+                    <li><p><b>Letícia:</b> Imagina! Depois me mostra esse projeto aí!</p></li>
+                </ul>
+            </article>
+            <br>
+            <article class="entrevista">
+                <h4>Entrevista 2 – Amigo (Profissional Externo)</h4>
+                <p><b>Entrevistado(a):</b> Rafael Samick França (amigo)</p>
+                <p><b>Profissão:</b> Entregador por aplicativo</p>
+                <p><b>Idade:</b> 24</p>
+                <p><b>Local:</b> Conversa no WhatsApp (simulada como bate-papo)</p>
+                <p><b>Entrevistador:</b> Guilherme de Sousa Santos</p>
+                <p><b>Data da entrevista:</b> 19/06/2025</p>
+                <p><b>Diálogo:</b></p>
+                <ul>
+                    <li><p><b>Você:</b> Fala, Rafa! Beleza? Tô fazendo um trampo aqui da faculdade e queria te perguntar uma coisa rapidinho.</p></li>
+                    <li><p><b>Rafael:</b> Falaa! Manda aí, tranquilo.</p></li>
+                    <li><p><b>Você:</b> Tô estudando visão computacional, e meu grupo tem que conversar com pessoas fora da facul pra entender problemas do dia a dia que possam ser resolvidos com câmera, celular, imagens e tal. Tipo, problemas que um sistema com visão computacional poderia ajudar a resolver.</p></li>
+                    <li><p><b>Rafael:</b> Ahh legal.</p></li>
+                    <li><p><b>Você:</b> No seu trampo de entregador, tem algo que você acha que poderia ser melhor se tivesse um uso legal de tecnologia com câmera ou vídeo?</p></li>
+                    <li><p><b>Rafael:</b> Mano, tem sim. Direto eu tenho problema de achar o número da casa. Às vezes tô na rua certa, mas os números tão apagados, ou escondidos atrás de planta, muro alto... e aí perco mó tempo tentando achar onde é a entrega.</p></li>
+                    <li><p><b>Você:</b> Caraca, nunca tinha pensado nisso. E se tivesse, sei lá, um app que com a câmera do celular reconhecesse os números das casas, ou ajudasse a identificar a casa certa com base nas imagens?</p></li>
+                    <li><p><b>Rafael:</b> Ia ajudar DEMAIS. Tipo, apontar o celular pra rua e ele já mostrar: "essa é a casa 842". Ou até cruzar com o pedido e já falar: “entrega aqui”. Porque GPS às vezes para na frente da casa errada, né.</p></li>
+                    <li><p><b>Você:</b> Verdade. Mas essa ideia da numeração é ótima. Já ajuda muito. Valeu demais, Rafa!</p></li>
+                    <li><p><b>Rafael:</b> Tamo junto, qualquer coisa é só chamar.</p></li>
+                </ul>
+            </article>
+            <hr>
         </section>
     </section>
 </main>
