--- a/relatorios/lab_2/index.html
+++ b/relatorios/lab_2/index.html
@@ -1,44 +1,92 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Relatório 2</title>
+<html lang="pt-BR" class="smooth-scroll">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Relatório – Lab 2</title>
 
-  <!-- Estilos simples – ajuste como quiser -->
-  <style>
-    body{
-      font-family: system-ui, sans-serif;
-      margin: 0 auto;
-      max-width: 720px;
-      padding: 1.5rem;
-      line-height: 1.6;
-    }
-    h1,h2,h3 { line-height: 1.2; }
-    pre, code { background:#f4f4f4; padding:2px 4px; border-radius:4px; }
-  </style>
-</head>
-<body>
-  <article id="post"></article>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css"
+    />
 
-  <!-- Biblioteca Marked (converter Markdown) -->
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github-dark.min.css"
+    />
 
-  <script>
-    fetch('lab2.md')
-      .then(resp => {
-        if (!resp.ok) throw new Error('Não encontrei lab2.md');
-        return resp.text();
-      })
-      .then(md => {
-        // Converte markdown → HTML
-        const html = marked.parse(md, { mangle:false, headerIds:false });
-        document.getElementById('post').innerHTML = html;
-      })
-      .catch(err => {
-        document.getElementById('post').innerHTML =
-          '<p style="color:red;">Erro: ' + err.message + '</p>';
+    <style>
+      main {
+        max-width: 48rem;
+        margin: 0 auto;
+        padding: 2rem 1rem 6rem;
+      }
+
+      #toTop {
+        position: fixed;
+        bottom: 1.25rem;
+        right: 1.25rem;
+        display: none;
+        padding: 0.5rem 0.8rem;
+        font-size: 1rem;
+        border: none;
+        border-radius: 0.5rem;
+        background: #0d1117;
+        color: #fff;
+        cursor: pointer;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        transition: opacity 0.2s ease-in-out;
+      }
+      #toTop:hover {
+        opacity: 0.85;
+      }
+
+      html.smooth-scroll {
+        scroll-behavior: smooth;
+      }
+    </style>
+  </head>
+
+  <body>
+    <main class="markdown-body" id="post">
+      <p>Carregando&nbsp;artigo…</p>
+    </main>
+
+    <button id="toTop" aria-label="Voltar ao topo">▲</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+
+    <script>
+      // 1) Carregar o Markdown
+      fetch('lab2.md')
+        .then((resp) => {
+          if (!resp.ok) throw new Error('lab2.md não encontrado');
+          return resp.text();
+        })
+        .then((md) => {
+          // 2) Converter MD → HTML
+          const html = marked.parse(md, { mangle: false, headerIds: false });
+          const post = document.getElementById('post');
+          post.innerHTML = html;
+
+          // 3) Destacar blocos de código
+          hljs.highlightAll();
+        })
+        .catch((err) => {
+          document.getElementById('post').innerHTML =
+            '<p style="color:red;">' + err.message + '</p>';
+        });
+
+      const btn = document.getElementById('toTop');
+
+      window.addEventListener('scroll', () => {
+        btn.style.display = window.scrollY > 200 ? 'block' : 'none';
       });
-  </script>
-</body>
+
+      btn.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    </script>
+  </body>
 </html>
