adjusts index lab2 horizontal alignment to center

--- a/relatorios/lab_2/index.html
+++ b/relatorios/lab_2/index.html
@@ -15,6 +15,11 @@
         padding: 2rem 1rem 6rem;
       }
 
+      .markdown-body {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
       #toTop {
         position: fixed;
         bottom: 1.25rem;
