removes darkmode lab2 index

--- a/relatorios/lab_2/index.html
+++ b/relatorios/lab_2/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="color-scheme" content="light" />
     <title>Relatório – Lab 2</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css" />
@@ -18,6 +19,7 @@
       .markdown-body {
         margin-left: auto;
         margin-right: auto;
+        color-scheme: light;
       }
 
       #toTop {
@@ -29,7 +31,7 @@
         font-size: 1rem;
         border: none;
         border-radius: 0.5rem;
-        background: #0066cc;
+        background: #4b5563;
         color: #fff;
         cursor: pointer;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
