--- a/relatorios/lab_2/index.html
+++ b/relatorios/lab_2/index.html
@@ -1,89 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR" class="smooth-scroll">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Relatório – Lab 2</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <!-- estilo Markdown (GitHub) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css" />
+  <meta name="color-scheme" content="light">
+  <title>Relatório – Lab 2</title>
 
-    <style>
-      main {
-        max-width: 48rem;
-        margin: 0 auto;
-        padding: 2rem 1rem 6rem;
-      }
-      .markdown-body {
-        margin-left: auto;
-        margin-right: auto;
-      }
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown-light.min.css" />
 
-      #toTop {
-        position: fixed;
-        bottom: 1.25rem;
-        right: 1.25rem;
-        display: none;
-        padding: 0.5rem 0.8rem;
-        font-size: 1rem;
-        border: none;
-        border-radius: 0.5rem;
-        background: #4b5563;
-        color: #fff;
-        cursor: pointer;
-        box-shadow: 0 2px 6px rgba(0,0,0,.3);
-        transition: opacity .2s ease-in-out;
-      }
-      #toTop:hover { opacity: .85; }
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css" />
 
-      html.smooth-scroll { scroll-behavior: smooth; }
+  <style>
+    main{max-width:48rem;margin:0 auto;padding:2rem 1rem 6rem;}
+    #toTop{position:fixed;bottom:1.25rem;right:1.25rem;display:none;padding:.5rem .8rem;font-size:1rem;border:0;
+           border-radius:.5rem;background:#4b5563;color:#fff;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,.3);
+           transition:opacity .2s;}
+    #toTop:hover{opacity:.85}
 
-      html,
-      body,
-      .markdown-body {
-        background: #fff !important;
-        color: #24292f !important;
-        color-scheme: light !important;
-      }
+    pre code, pre>code.hljs{background:#f6f8fa !important;}
+    table{background:#fff !important;}
+  </style>
+</head>
 
-      @media (prefers-color-scheme: dark) {
-        html,
-        body,
-        .markdown-body {
-          background: #fff !important;
-          color: #24292f !important;
-        }
-      }
-    </style>
-  </head>
+<body>
+  <main class="markdown-body" id="post">
+    <p>Carregando&nbsp;artigo…</p>
+  </main>
 
-  <body>
-    <main class="markdown-body" id="post">
-      <p>Carregando&nbsp;artigo…</p>
-    </main>
+  <button id="toTop" aria-label="Voltar ao topo">▲</button>
 
-    <button id="toTop" aria-label="Voltar ao topo">▲</button>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+  <script>
+    fetch('lab2.md')
+      .then(r => { if(!r.ok) throw Error('lab2.md não encontrado'); return r.text(); })
+      .then(md => {
+        document.getElementById('post').innerHTML = marked.parse(md, { mangle:false, headerIds:false });
+        hljs.highlightAll();
+      })
+      .catch(err => { document.getElementById('post').innerHTML = '<p style="color:red;">'+err.message+'</p>'; });
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-
-    <script>
-      fetch('lab2.md')
-        .then(r => { if(!r.ok) throw Error('lab2.md não encontrado'); return r.text(); })
-        .then(md => {
-          document.getElementById('post').innerHTML =
-            marked.parse(md, { mangle:false, headerIds:false });
-          hljs.highlightAll();
-        })
-        .catch(err => {
-          document.getElementById('post').innerHTML =
-            '<p style="color:red;">' + err.message + '</p>';
-        });
-
-      const btn = document.getElementById('toTop');
-      addEventListener('scroll', () => btn.style.display = scrollY > 200 ? 'block' : 'none');
-      btn.addEventListener('click', () => scrollTo({ top:0, behavior:'smooth' }));
-    </script>
-  </body>
+    const btn=document.getElementById('toTop');
+    addEventListener('scroll',()=>btn.style.display=scrollY>200?'block':'none');
+    btn.addEventListener('click',()=>scrollTo({top:0,behavior:'smooth'}));
+  </script>
+</body>
 </html>
